# twrpdtgen_v2

./: README.md  pyproject.toml
.github/workflows/: python-publish.yml
twrpdtgen-v2/: device_tree.py
twrpdtgen-v2/proprietary_files/: get_vndk_libs.py  section.py
twrpdtgen-v2/proprietary_files/sections/: ant.py  broadcastradio.py  camera.py  cne.py  configstore.py  cvp.py  dsp.py  dumpstate.py  face.py  fastboot.py  fingerprint.py  input.py  ir.py  local_time.py  nfc.py  sensors.py  soter.py  time.py  vr.py
twrpdtgen-v2/utils/: format_props.py
twrpdtgen_v2/: __init__.py  __main__.py  __main__.py.replacebackup  device_tree.py  device_tree.py.replacebackup  main.py  main.py.replacebackup
twrpdtgen_v2/proprietary_files/: elf.py  get_vndk_libs.py  ignore.py  proprietary_files_list.py  proprietary_files_list.py.replacebackup  section.py
twrpdtgen_v2/proprietary_files/sections/: acdb.py  acdb.py.replacebackup  adsp.py  alarm.py  ant.py  (+94 more)
twrpdtgen_v2/templates/: Android.bp.jinja2  Android.mk.jinja2  AndroidProducts.mk.jinja2  BoardConfig.mk.jinja2  BoardConfig.mk.jinja2.replacebackup  LICENSE.jinja2  README.md.jinja2  __init__.py  device.mk.jinja2  extract-files.sh.jinja2  rootdir_Android.bp.jinja2  rootdir_Android.mk.jinja2  setup-makefiles.sh.jinja2  twrp_device.mk.jinja2
twrpdtgen_v2/utils/: boot_configuration.py  format_props.py  format_props.py.replacebackup  ignored_props.py
twrpdtgen_v3/: __main__.py  device_tree.py  main.py
twrpdtgen_v3/proprietary_files/: get_vndk_libs.py  ignore.py  proprietary_files_list.py
twrpdtgen_v3/templates/: LICENSE.jinja2
(+41 files in other folders)
